--- a/login-index.html
+++ b/login-index.html
@@ -23,7 +23,7 @@ required>
          <a href="#"> Forgot Password </a>
  </div>
  <div class="button">
-     <button id="button"> Login </button>
+     <a href="exam.html"><button id="button"> onclick="location=""> Login </button></a>
  </div>
     </form>
   </div>
