login-index.html

--- a/login-index.html
+++ b/login-index.html
@@ -23,7 +23,7 @@ required>
          <a href="#"> Forgot Password </a>
  </div>
  <div class="button">
-     <a href="exam.html"><button id="button"> onclick="location="exam.html"> Login </button></a>
+     <a href="exam.html"><button id="button" onclick="location='exam.html'"> Login </button></a>
  </div>
     </form>
   </div>
